--- a/images/about us.html
+++ b/images/about us.html
@@ -201,7 +201,7 @@ height:48px;}
 <table width="990" border="0" align="center" cellpadding="0" cellspacing="0">
   <tr>
     <td width="990" height="47"><div id="CollapsiblePanel1" class="CollapsiblePanel">
-      <div class="CollapsiblePanelTab" tabindex="0"><b>More about Nkuzi Development Association</b></div>
+      <div class="CollapsiblePanelTab" tabindex="0"><b>More About Us</b></div>
       <div class="CollapsiblePanelContent">
         <p>&nbsp;</p>
         <table width="951" border="0" align="center" cellpadding="0" cellspacing="0">
