--- a/partners.html
+++ b/partners.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Nkuzi Development Association - Partners</title>
+  <title>Partners</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -52,19 +52,21 @@
           <li><a href="index.php">Home</a></li>
           <li class="dropdown"><a href="#"><span>About Us</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="about.html">More about Nkuzi Development Association</a></li>
-              <li><a href="directors.php">Nkuzi Development Association Directors </a></li>
-              <li><a href="staff.php">Nkuzi Development Association Staff  </a></li>
-              <li><a href="funders.php">Nkuzi Development Funders/Donors  </a></li>
+              <li><a href="about.html">More About Us</a></li>
+              <li><a href="directors.php">Board Of Directors </a></li>
+              <li><a href="staff.php">Our Staff  </a></li>
+              <li><a href="funders.php">Our Funders/Donors  </a></li>
               <li><a class="active " href="partners.html">Our Partners</a></li>
-              <li><a href="portfolio.html">Gallery</a></li>
+
             </ul>
           </li>
-          <li><a href="blog.php">Programme</a></li>
-          <li><a href="documents.html">Documents</a></li>
           <li><a href="history.html">History</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="blog.php">Programme</a></li>
+          <li><a href="documents.php">Documents</a></li>
+
           <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="adminLogin.php">Admin Login</a></li>
+
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -79,10 +81,6 @@
 
         <div class="d-flex justify-content-between align-items-center">
           <h2>Our Partners</h2>
-          <ol>
-            <li><a href="index.php">Home</a></li>
-            <li>Our Partners</li>
-          </ol>
         </div>
 
       </div>
@@ -100,69 +98,61 @@
               <div class="col-md-6 col-lg-3 align-items-stretch" data-aos="fade-up">
                 <div class="icon-box icon-box-pink">
                 <div class="content"><img src="images/Logo (1).png" alt=""></div>
-                  <h4 class="title"><a href="">Alliance For Rural Democracy</a></h4>
+                  <h4 class="title"><a href="https://ardt.org.za/">Alliance For Rural Democracy</a></h4>
                 </div>
               </div>
 
               <div class="col-md-6 col-lg-3 align-items-stretch" data-aos="fade-up" data-aos-delay="100">
                 <div class="icon-box icon-box-cyan">
                   <div class="content"><img src="images/logo 2.png" height="130" alt=""></div>
-                  <h4 class="title"><a href="">Land Access Movement of South Africa)</a></h4>
+                  <h4 class="title"><a href="https://www.landcoalition.org/">Land Access Movement of South Africa)</a></h4>
                 </div>
               </div>
 
               <div class="col-md-6 col-lg-3 align-items-stretch" data-aos="fade-up">
                 <div class="icon-box icon-box-pink">
                   <div class="content"><img src="images/logo 3.jpg" height="130" alt=""></div>
-                  <h4 class="title"><a href="">Tshintsha Amakhaya</a></h4>
+                  <h4 class="title"><a href="https://www.landportal.org/organization/tshintsha-amakhaya">Tshintsha Amakhaya</a></h4>
                 </div>
               </div>
 
               <div class="col-md-6 col-lg-3 align-items-stretch" data-aos="fade-up" data-aos-delay="200">
                 <div class="icon-box icon-box-green">
                     <div class="content"><img src="images/logo 4.png" height="130" alt=""></div>
-                  <h4 class="title"><a href="">Institution for Poverty, Land and Agrarian  Studies (PLAAS)</a></h4>
+                  <h4 class="title"><a href="https://www.plaas.org.za/">Institution for Poverty, Land and Agrarian  Studies (PLAAS)</a></h4>
               </div>
               </div>
 
               <div class="col-md-6 col-lg-3 align-items-stretch" data-aos="fade-up">
                 <div class="icon-box icon-box-pink">
                     <div class="content"><img src="images/legal_resources.jpg" alt=""></div>
-                  <h4 class="title"><a href="">Legal Resource Centre</a></h4>
+                  <h4 class="title"><a href="https://lrc.org.za/">Legal Resource Centre</a></h4>
                 </div>
               </div>
               <div class="col-md-6 col-lg-3 align-items-stretch" data-aos="fade-up" data-aos-delay="200">
                 <div class="icon-box icon-box-green">
                   <div class="content"><img src="images/Em.jpg" height="130" alt=""></div>
-                  <h4 class="title"><a href="">South African Catholic Bishops’ Council</a></h4>
+                  <h4 class="title"><a href="https://sacbc.org.za/">South African Catholic Bishops’ Council</a></h4>
               </div>
               </div>
 
               <div class="col-md-6 col-lg-3 align-items-stretch" data-aos="fade-up" data-aos-delay="200">
                 <div class="icon-box icon-box-blue">
-                    <div class="content"><img src="images/abc.jpg" height="130" alt=""></div>
-                  <h4 class="title"><a href="">South African  Human Rights Commission</a></h4>
+                    <div class="content"><img src="images/landnnes.png" height="130" alt=""></div>
+                  <h4 class="title"><a href="https://www.landnnes.org/">	Landnnes</a></h4>
                 </div>
               </div>
-
               <div class="col-md-6 col-lg-3 align-items-stretch" data-aos="fade-up" data-aos-delay="200">
                 <div class="icon-box icon-box-blue">
-                    <div class="content"><img src="images/ccma-logo.jpg" height="130" alt=""></div>
-                  <h4 class="title"><a href="">	Commission for Conciliation, Mediation and Arbitration</a></h4>
-                </div>
-              </div>
-
-              <div class="col-md-6 col-lg-3 align-items-stretch" data-aos="fade-up" data-aos-delay="200">
-                <div class="icon-box icon-box-blue">
-                  <div class="content"><img src="images/download-5.png" height="130" alt=""></div>
-                  <h4 class="title"><a href="">Commission for Gender Equality</a></h4>
+                    <div class="content"><img src="images/wra.jpeg" height="130" alt=""></div>
+                  <h4 class="title"><a href="https://ruralwomensassembly.wordpress.com/">	Rural Woman's Assmbly</a></h4>
                 </div>
               </div>
 
               <div class="col-md-6 col-lg-3 align-items-stretch" data-aos="fade-up">
                 <div class="icon-box icon-box-pink">
                   <div class="content"><img src="images/Landless People.jpg" height="130" alt=""></div>
-                  <h4 class="title"><a href="">Landless People’s Movement</a></h4>
+                  <h4 class="title"><a href="https://viacampesina.org/en/landless-peoples-movement-lpm/">Landless People’s Movement</a></h4>
                 </div>
               </div>
 
@@ -170,7 +160,7 @@
               <div class="col-md-6 col-lg-3 align-items-stretch" data-aos="fade-up" data-aos-delay="200">
                 <div class="icon-box icon-box-green">
                   <div class="content"><img src="images/International Land.png" height="130" alt=""></div>
-                  <h4 class="title"><a href="">International Land Coalition</a></h4>
+                  <h4 class="title"><a href="https://www.landcoalition.org/en/">International Land Coalition</a></h4>
               </div>
               </div>
 
@@ -196,10 +186,10 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="index.php">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="developments.html">Developments</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="documents.html">Documents</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="documents.php">Documents</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="partners.html">Our Partners</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Gallery</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Contact Us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="gallery.html">Gallery</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="adminLogin.php">Admin Login</a></li>
             </ul>
           </div>
 
