--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -53,7 +53,7 @@
           <li><a class="" href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a class="active" href="portfolio.html">Portfolio</a></li>
+          <li><a class="active" href="gallery.html">Portfolio</a></li>
           <li><a href="team.html">Team</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -91,7 +91,7 @@
           <h2>Portfolio Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="gallery.html">Portfolio</a></li>
             <li>Portfolio Details</li>
           </ol>
         </div>
